# limiga

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/constraints/: Cargo.toml
crates/constraints/src/: bool_lin_leq.rs  lib.rs  linear_leq.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  assignment.rs  atom.rs  brancher.rs  clausal_propagator.rs  clause.rs  domains.rs  implication_graph.rs  lib.rs  lit.rs  preprocessor.rs  propagation.rs  search_tree.rs  solver.rs  storage.rs  termination.rs  trail.rs  variable.rs
crates/core/src/integer/: affine_view.rs  atoms.rs  binary_functions.rs  interval_domain.rs  mod.rs
crates/core/src/propagation/: mod.rs  queue.rs  reason.rs  watch_list.rs
crates/dimacs/: Cargo.toml
crates/dimacs/src/: lib.rs
crates/flatzinc/: Cargo.toml
crates/flatzinc/examples/: ast_dump.rs
crates/flatzinc/src/: annotations.rs  ast.rs  constraints.rs  flatzinc.pest  lib.rs
crates/flatzinc/tests/: constraints.rs  goal.rs  parameters.rs  variables.rs
crates/propagators/: Cargo.toml
crates/propagators/src/: lib.rs
examples/: bibd.rs
instances/flatzinc/: bool_lin_leq.json  int_lin_le.json
limiga/: Cargo.toml
limiga/examples/: nqueens.rs
limiga/src/: domains.rs  keyed_idx_vec.rs  lib.rs  propagator_queue.rs  search.rs  solver.rs  variables.rs  views.rs
limiga/src/domains/: bitset.rs  mod.rs  store.rs
limiga/src/propagators/: mod.rs  not_eq.rs
limiga/src/search/: mod.rs
minizinc/: limiga.msc
src/: error.rs  flatzinc.rs  lib.rs  main.rs  sat.rs  termination.rs
tests/: cnf.rs
(+4 files in other folders)
