[package]
name = "limiga"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
limiga-core = { path = "crates/core" }
limiga-dimacs = { path = "crates/dimacs" }
signal-hook = "0.3.17"
thiserror = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
thiserror = "1.0.49"
log = "0.4.20"
